fix: update dark theme border color for improved visibility

--- a/_sass/themes/_dark.scss
+++ b/_sass/themes/_dark.scss
@@ -4,7 +4,7 @@
   /* Framework color */
   --main-bg: rgb(27, 27, 30);
   --mask-bg: rgb(68, 69, 70);
-  --main-border-color: rgb(44, 45, 45);
+  --main-border-color: rgb(13, 220, 220);
 
   /* Common color */
   --text-color: rgb(175, 176, 177);
